metadata/force-app/main/default/objects/CustomName_Nfttl__c/CustomName_Nfttl__c.object-meta.xml
<CustomObject>
    <description>Description_oOtbe</description>
    <label>CustomLabel_ZpCOv</label>
    <nameField>
        <label>CustomLabel_ZpCOv</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ZpCOvs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>