metadata/force-app/main/default/objects/CustomName_Nfttl__c/fields/CustomField_MYKuD__c.field-meta.xml
<CustomField>
    <fullName>CustomField_MYKuD__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldNmlFM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>